force-app/main/default/objects/Account/fields/Alcaldia_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>Alcaldia_Notificacion__c</fullName>
    <label>Alcaldía Notificación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>