force-app/main/default/objects/Account/fields/Ano_Esc_Pub__c.field-meta.xml
<CustomField>
    <fullName>Ano_Esc_Pub__c</fullName>
    <label>Año Esc. Púb.</label>
    <length>4</length>
    <type>Text</type>
</CustomField>