force-app/main/default/objects/Account/fields/Ano_Esc_Publica_RL__c.field-meta.xml
<CustomField>
    <fullName>Ano_Esc_Publica_RL__c</fullName>
    <label>Año Esc. Pública RL</label>
    <length>4</length>
    <type>Text</type>
</CustomField>