force-app/main/default/objects/Account/fields/Ano_Folio_Merc__c.field-meta.xml
<CustomField>
    <fullName>Ano_Folio_Merc__c</fullName>
    <label>Año Folio Merc.</label>
    <length>4</length>
    <type>Text</type>
</CustomField>