force-app/main/default/objects/Account/fields/Calle_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Calle_de_envio__c</fullName>
    <label>Calle de envío</label>
    <length>255</length>
    <type>Text</type>
</CustomField>