force-app/main/default/objects/Account/fields/Calle_de_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Calle_de_facturacion__c</fullName>
    <label>Calle de facturación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>