force-app/main/default/objects/Account/fields/Calle_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>Calle_Notificacion__c</fullName>
    <label>Calle Notificación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>