force-app/main/default/objects/Account/fields/Carta_acceso_x_tecnico__c.field-meta.xml
<CustomField>
    <fullName>Carta_acceso_x_tecnico__c</fullName>
    <label>Carta acceso x técnico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>