force-app/main/default/objects/Account/fields/CD_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>CD_Notificacion__c</fullName>
    <label>CD Notificación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>