force-app/main/default/objects/Account/fields/Ciudad_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_de_envio__c</fullName>
    <label>Ciudad de envío</label>
    <length>255</length>
    <type>Text</type>
</CustomField>