force-app/main/default/objects/Account/fields/Ciudad_de_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_de_facturacion__c</fullName>
    <label>Ciudad de facturación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>