force-app/main/default/objects/Account/fields/Ciudad_Notaria__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Notaria__c</fullName>
    <label>Ciudad Notaría</label>
    <length>100</length>
    <type>Text</type>
</CustomField>