force-app/main/default/objects/Account/fields/Codigo_postal_de_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_postal_de_facturacion__c</fullName>
    <label>Código postal de facturación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>