force-app/main/default/objects/Account/fields/Colonia_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>Colonia_Notificacion__c</fullName>
    <label>Colonia Notificación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>