force-app/main/default/objects/Account/fields/Correo_electronico_RL__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_RL__c</fullName>
    <label>Correo electrónico RL</label>
    <type>Email</type>
</CustomField>