force-app/main/default/objects/Account/fields/Correo_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>Correo_Notificacion__c</fullName>
    <label>Correo Notificación</label>
    <type>Email</type>
</CustomField>