force-app/main/default/objects/Account/fields/CP_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>CP_Notificacion__c</fullName>
    <label>CP Notificación</label>
    <length>5</length>
    <type>Text</type>
</CustomField>