force-app/main/default/objects/Account/fields/Dia_Esc_Pub__c.field-meta.xml
<CustomField>
    <fullName>Dia_Esc_Pub__c</fullName>
    <label>Día Esc. Púb.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>