force-app/main/default/objects/Account/fields/Dia_Esc_Publica_RL__c.field-meta.xml
<CustomField>
    <fullName>Dia_Esc_Publica_RL__c</fullName>
    <label>Día Esc. Pública RL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>