force-app/main/default/objects/Account/fields/Dia_Folio_Merc__c.field-meta.xml
<CustomField>
    <fullName>Dia_Folio_Merc__c</fullName>
    <label>Día Folio Merc.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>