force-app/main/default/objects/Account/fields/Dias_envio__c.field-meta.xml
<CustomField>
    <fullName>Dias_envio__c</fullName>
    <label>Días de envío</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>