force-app/main/default/objects/Account/fields/Escritura_Publica__c.field-meta.xml
<CustomField>
    <fullName>Escritura_Publica__c</fullName>
    <label># Escritura Pública</label>
    <length>30</length>
    <type>Text</type>
</CustomField>