force-app/main/default/objects/Account/fields/Escritura_Publica_RL__c.field-meta.xml
<CustomField>
    <fullName>Escritura_Publica_RL__c</fullName>
    <label># Escritura Pública RL</label>
    <length>30</length>
    <type>Text</type>
</CustomField>