force-app/main/default/objects/Account/fields/Estado_o_provincia_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Estado_o_provincia_de_envio__c</fullName>
    <label>Estado o provincia de envío</label>
    <length>255</length>
    <type>Text</type>
</CustomField>