force-app/main/default/objects/Account/fields/Estado_Subetapa__c.field-meta.xml
<CustomField>
    <fullName>Estado_Subetapa__c</fullName>
    <label>Estado Subetapa</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subetapa__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente de información a cliente</fullName>
            </value>
            <value>
                <fullName>Pendiente de información de cliente</fullName>
            </value>
            <value>
                <fullName>Información recibida</fullName>
            </value>
            <value>
                <fullName>Información enviada</fullName>
            </value>
            <value>
                <fullName>Alta pendiente</fullName>
            </value>
            <value>
                <fullName>Alta confirmada</fullName>
            </value>
            <value>
                <fullName>NA - Cliente activo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>