force-app/main/default/objects/Account/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>