force-app/main/default/objects/Account/fields/Ext_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>Ext_Notificacion__c</fullName>
    <label># Ext Notificación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>