force-app/main/default/objects/Account/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extensión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>