force-app/main/default/objects/Account/fields/Facturas_sin_pago_para_sancion__c.field-meta.xml
<CustomField>
    <fullName>Facturas_sin_pago_para_sancion__c</fullName>
    <label># Facturas sin pago para sanción</label>
    <length>10</length>
    <type>Text</type>
</CustomField>