force-app/main/default/objects/Account/fields/Folio_Mercantil__c.field-meta.xml
<CustomField>
    <fullName>Folio_Mercantil__c</fullName>
    <label>Folio Mercantil</label>
    <length>100</length>
    <type>Text</type>
</CustomField>