force-app/main/default/objects/Account/fields/Indicar_placas__c.field-meta.xml
<CustomField>
    <fullName>Indicar_placas__c</fullName>
    <label>Indicar placas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>