force-app/main/default/objects/Account/fields/Int_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>Int_Notificacion__c</fullName>
    <label># Int Notificación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>