force-app/main/default/objects/Account/fields/ISN__c.field-meta.xml
<CustomField>
    <fullName>ISN__c</fullName>
    <label>ISN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>