force-app/main/default/objects/Account/fields/Mes_Esc_Pub__c.field-meta.xml
<CustomField>
    <fullName>Mes_Esc_Pub__c</fullName>
    <label>Mes Esc. Púb.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>