force-app/main/default/objects/Account/fields/Mes_Esc_Publica_RL__c.field-meta.xml
<CustomField>
    <fullName>Mes_Esc_Publica_RL__c</fullName>
    <label>Mes Esc. Pública RL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>