force-app/main/default/objects/Account/fields/Mes_Folio_Merc__c.field-meta.xml
<CustomField>
    <fullName>Mes_Folio_Merc__c</fullName>
    <label>Mes Folio Merc.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>