force-app/main/default/objects/Account/fields/Nacionalidad_Personas_fisicas__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad_Personas_fisicas__c</fullName>
    <label>Nacionalidad (Personas físicas)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>