force-app/main/default/objects/Account/fields/No_Ext__c.field-meta.xml
<CustomField>
    <fullName>No_Ext__c</fullName>
    <label>No.Ext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>