force-app/main/default/objects/Account/fields/No_Int__c.field-meta.xml
<CustomField>
    <fullName>No_Int__c</fullName>
    <label>No.Int</label>
    <length>255</length>
    <type>Text</type>
</CustomField>