force-app/main/default/objects/Account/fields/No_proveedor_Pyatz__c.field-meta.xml
<CustomField>
    <fullName>No_proveedor_Pyatz__c</fullName>
    <label>No. proveedor Pyatz</label>
    <length>20</length>
    <type>Text</type>
</CustomField>