force-app/main/default/objects/Account/fields/No_sucursal__c.field-meta.xml
<CustomField>
    <fullName>No_sucursal__c</fullName>
    <description>Para números como &quot;098&quot;, &quot;090&quot;.</description>
    <label>No. sucursal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>