force-app/main/default/objects/Account/fields/Nombre_RL__c.field-meta.xml
<CustomField>
    <fullName>Nombre_RL__c</fullName>
    <label>Nombre RL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>