force-app/main/default/objects/Account/fields/Notaria__c.field-meta.xml
<CustomField>
    <fullName>Notaria__c</fullName>
    <label># Notaría</label>
    <length>10</length>
    <type>Text</type>
</CustomField>