force-app/main/default/objects/Account/fields/Pais_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_envio__c</fullName>
    <label>País de envío</label>
    <length>255</length>
    <type>Text</type>
</CustomField>