force-app/main/default/objects/Account/fields/Pais_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>Pais_Notificacion__c</fullName>
    <label>País Notificación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>