force-app/main/default/objects/Account/fields/Pase_acceso__c.field-meta.xml
<CustomField>
    <fullName>Pase_acceso__c</fullName>
    <label>Pase acceso</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>