force-app/main/default/objects/Account/fields/Period_doctos__c.field-meta.xml
<CustomField>
    <fullName>Period_doctos__c</fullName>
    <label>Period. doctos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Por evento</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>