force-app/main/default/objects/Account/fields/Periodicidad_carta__c.field-meta.xml
<CustomField>
    <fullName>Periodicidad_carta__c</fullName>
    <label>Periodicidad carta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Por evento</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>