force-app/main/default/objects/Account/fields/Permiso_Entidad__c.field-meta.xml
<CustomField>
    <fullName>Permiso_Entidad__c</fullName>
    <label>Permiso de Entidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>