force-app/main/default/objects/Account/fields/Plan_Generador__c.field-meta.xml
<CustomField>
    <fullName>Plan_Generador__c</fullName>
    <label>Plan de Generador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>