force-app/main/default/objects/Account/fields/Portal_Suburbia__c.field-meta.xml
<CustomField>
    <fullName>Portal_Suburbia__c</fullName>
    <label>Portal Suburbia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>