force-app/main/default/objects/Account/fields/Proceso_ingreso_de_facturas__c.field-meta.xml
<CustomField>
    <fullName>Proceso_ingreso_de_facturas__c</fullName>
    <label>Proceso ingreso de facturas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>