force-app/main/default/objects/Account/fields/Proceso_liberacion_pedidos__c.field-meta.xml
<CustomField>
    <fullName>Proceso_liberacion_pedidos__c</fullName>
    <label>Proceso liberación pedidos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>