force-app/main/default/objects/Account/fields/Registro_IMSS__c.field-meta.xml
<CustomField>
    <fullName>Registro_IMSS__c</fullName>
    <label># Registro IMSS</label>
    <length>30</length>
    <type>Text</type>
</CustomField>