force-app/main/default/objects/Account/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <label>RFC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>