force-app/main/default/objects/Account/fields/Subetapa__c.field-meta.xml
<CustomField>
    <fullName>Subetapa__c</fullName>
    <label>Subetapa</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Etapa__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta cliente (Clientes nuevos)</fullName>
            </value>
            <value>
                <fullName>Alta pyatz(Clientes nuevos)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>