force-app/main/default/objects/Account/fields/Tel_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>Tel_Notificacion__c</fullName>
    <label>Tel. Notificación</label>
    <type>Phone</type>
</CustomField>