force-app/main/default/objects/Account/fields/Tiempo_contrato_meses__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_contrato_meses__c</fullName>
    <label>Tiempo contrato (meses)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>